# isles24

./: .gitignore  README.md  download_data.sh  download_weights.sh  environment.yml  extract_data.sh  upload_runs.sh
isles/: README.md  pyproject.toml
isles/src/isles/: metrics.py
scripts/: evaluate_predictions.py  fix_headers.py  generate_datalist.py  log_wandb.py  preprocess_images.py  train_auto3dseg.py  train_swin.py
src/isles/: io.py  logging.py  metrics.py  swin.py  transforms.py  utils.py
src/isles/swin/: checkpoint.py  config.py  evaluation.py  model.py  training.py  transforms.py
